[package]
name = "citric_github"
version = "0.1.0"
edition = "2024"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
citro3d = {git = "https://github.com/rust3ds/citro3d-rs"}
citro3d-sys = {git = "https://github.com/rust3ds/citro3d-rs"}
egui = { version = "0.30.0", default-features = false, features = ["default_fonts","bytemuck"] }
egui_citro3d = {git = "https://github.com/LexiBigCheese/egui_citro3d"}
ehttp = {version = "*", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
[package.metadata.cargo-3ds]
romfs_dir = "romfs"
[profile.dev]
opt-level = 3
lto="thin"

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring" }
# Note that I'm using a patched ehttp, if you're building then you'll want to make a patched ehttp yourself
ehttp = { path = "../ehttp/ehttp" }
[profile.dev.package.ring]
opt-level = 1
[profile.release.package.ring]
opt-level = 1
